add swagger for method get/post
